<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item-->
    <!--android:id="@+id/nav_cache"-->
    <!--android:icon="@drawable/ic_menu_camera"-->
    <!--android:title="缓存管理" />-->

    <item
        android:id="@+id/nav_feedback"
        android:icon="@drawable/ic_feedback"
        android:title="@string/feedback" />

    <item
        android:id="@+id/nav_teach_use"
        android:icon="@drawable/ic_teach"
        android:title="@string/use_teaching" />

    <item
        android:id="@+id/nav_sharing"
        android:icon="@drawable/ic_menu_share"
        android:title="分享" />

    <item
        android:id="@+id/nav_check_app"
        android:icon="@drawable/ic_check_version"
        android:title="@string/check_app" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_about"
        android:title="@string/about" />

</menu>
