<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/cache_title"
        android:textColor="#A40E15"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="#A40E15" />

    <TextView
        android:id="@+id/tvCacheBehind50"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:gravity="center_vertical"
        android:text="@string/beforn_50"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvCacheBehindAll"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:gravity="center_vertical"
        android:text="@string/beforn_all"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvCacheAll"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:gravity="center_vertical"
        android:text="@string/cache_all"
        android:textColor="#000000"
        android:textSize="16sp" />
</LinearLayout>