<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/baseColor"
        android:elevation="15dp">

        <ImageView
            android:id="@+id/ivReturn"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_bg"
            android:clickable="true"
            android:onClick="onReturn"
            android:padding="15dp"
            android:src="@drawable/ic_return" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/ivReturn"
            android:background="@color/baseFocuColor" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/use_teaching"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/teach_01_title"
                android:textColor="#000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:text="@string/teach_01_msg"
                android:textColor="#000" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/teach_01" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:background="#1D9FCE" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/teach_02_title"
                android:textColor="#000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:text="@string/teach_02_msg"
                android:textColor="#000" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/teach_02" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>