<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:id="@+id/view_book_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="70dp"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:background="#fff"
                android:elevation="5dp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.anonymouser.book.widget.LocaleTextView
                    android:id="@+id/tv_book_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <com.anonymouser.book.widget.LocaleTextView
                    android:id="@+id/tv_auther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auther" />

                <com.anonymouser.book.widget.LocaleTextView
                    android:id="@+id/tv_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type" />

                <com.anonymouser.book.widget.LocaleTextView
                    android:id="@+id/tv_source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="来源：" />
            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/view_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:visibility="visible">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#eee" />

            <View
                android:layout_width="6dp"
                android:layout_height="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/baseColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/jianjie"
                android:textColor="#000000" />

            <com.anonymouser.book.widget.LocaleTextView
                android:id="@+id/tv_introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="35dp"
                android:ellipsize="end"
                android:maxLines="12"
                android:text=""
                android:textColor="#A8000000" />


            <Button
                android:id="@+id/bt_read"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/tv_introduction"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:layout_toLeftOf="@+id/temp_view"
                android:background="@color/baseColor"
                android:gravity="center"
                android:text="@string/reading"
                android:textColor="#fff"
                android:textSize="16sp" />

            <View
                android:id="@+id/temp_view"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_centerInParent="true" />

            <Button
                android:id="@+id/bt_add_bookcase"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/tv_introduction"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@+id/temp_view"
                android:background="@color/baseColor"
                android:gravity="center"
                android:text="@string/add_book_case"
                android:textColor="#fff"
                android:textSize="16sp" />

            <Button
                android:id="@+id/bt_no_book"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/tv_introduction"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="#3B403F"
                android:gravity="center"
                android:text="@string/no_book"
                android:textColor="#fff"
                android:textSize="16sp"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>